# python-template-test

./: CITATION.cff  CONTRIBUTING.md  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: conf.py
my_python_package/: __init__.py  my_module.py
tests/: test_my_module.py
