# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Jane Smith
author_email = yourname@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Short description of package
keywords =
    keyword1
    keyword2
long_description = file: README.md
long_description_content_type = text/markdown
name = my_python_package
project_urls =
    Bug Tracker = git@github.com:<my-github-organization>/my-python-project/issues
url = git@github.com:<my-github-organization>/my-python-project
version = 0.1.0

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    ruff
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = my_python_package, my_python_package.*
